--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "omeka/omeka-s",
+    "name": "stephenwf/omeka-s",
     "type": "project",
     "description": "The Omeka S collections management system. A local network of independently curated exhibits sharing a collaboratively built pool of items and their metadata.",
     "license": "GPL-3.0",
@@ -62,7 +62,6 @@
         "zendframework/zend-view": "^2.8",
         "zendframework/zend-xmlrpc": "^2.6",
         "zendframework/zendxml": "^1.0.2",
-        "omeka/composer-addon-installer": "*",
         "omeka-s-themes/default": "dev-develop",
         "beberlei/DoctrineExtensions": "^1.0"
     },
@@ -83,10 +82,6 @@
         {
             "type": "vcs",
             "url": "https://github.com/omeka-s-themes/default.git"
-        },
-        {
-            "type": "path",
-            "url": "application/data/composer-addon-installer"
         }
     ]
 }
