--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "omeka/omeka-s",
+    "name": "stephenwf/omeka-s",
     "type": "project",
     "description": "The Omeka S collections management system. A local network of independently curated exhibits sharing a collaboratively built pool of items and their metadata.",
     "license": "GPL-3.0",
@@ -62,31 +62,14 @@
         "zendframework/zend-view": "^2.8",
         "zendframework/zend-xmlrpc": "^2.6",
         "zendframework/zendxml": "^1.0.2",
-        "omeka/composer-addon-installer": "*",
-        "omeka-s-themes/default": "dev-develop",
         "beberlei/DoctrineExtensions": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.2",
         "friendsofphp/php-cs-fixer": "^2.0",
-        "zendframework/zend-test": "^3.0.1",
-        "zerocrates/extract-tagged-strings": "dev-master"
+        "zendframework/zend-test": "^3.0.1"
     },
     "autoload": {
         "psr-4": {"Omeka\\": "application/src"}
-    },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/zerocrates/extract-tagged-strings.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/omeka-s-themes/default.git"
-        },
-        {
-            "type": "path",
-            "url": "application/data/composer-addon-installer"
-        }
-    ]
+    }
 }
